fixed bug with menu (use z-index 2 or higher) and added hover pointer

--- a/stylewedding.css
+++ b/stylewedding.css
@@ -33,7 +33,7 @@ header {
   width: 100%;
   top: 0%;
   background-color: var(--opaque-black);
-  z-index: 1;
+  z-index: 2;
   transition: top 0.3s;
 }
 
@@ -53,6 +53,10 @@ header img {
   height: 4VH;
   padding: 5px 10px;
   font-size: 6VH;
+}
+
+.menu-button:hover {
+  cursor: pointer;
 }
 
 /* Navigationsknappar */
@@ -89,7 +93,7 @@ header img {
   height: 0%;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   background-color: var(--opaque-black);
@@ -155,7 +159,7 @@ header img {
 
 .products, .workflow {
   position: relative;
-  z-index: 10;
+  z-index: 1;
   background-color: #a66d62;
   padding: 10px 0;
 }
@@ -225,7 +229,7 @@ canvas{
 
 .arrows {
   position: relative;
-  z-index: 10;
+  z-index: 1;
   text-align: center;
   font-size: 2em;
 }
